# SolarPILOT

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  UpdateVersionNumber.py  create_dist.py
app/: FieldPlot.cpp  FieldPlot.h  FluxPlot.cpp  FluxPlot.h  GUI_ClimatePage.cpp  GUI_CostPage.cpp  GUI_HeliostatPage.cpp  GUI_LayoutPage.cpp  GUI_LayoutSimulationPage.cpp  GUI_MarketPage.cpp  GUI_OptimizationPage.cpp  GUI_ParametricSimulationPage.cpp  GUI_PerformanceSimulationPage.cpp  GUI_PlotFieldPage.cpp  GUI_PlotFluxPage.cpp  GUI_ReceiverPage.cpp  GUI_ResultsPage.cpp  GUI_SimulationsPage.cpp  GUI_main.cpp  GUI_main.h  ImageCanvas.cpp  ImageCanvas.h  InputControl.cpp  InputControl.h  OutputControl.cpp  OutputControl.h  add-header.py  gui_about_dialog.cpp  gui_about_dialog.h  gui_util.cpp  gui_util.h  help.cpp  help.h  kml_select_dialog.cpp  kml_select_dialog.h  layout_sim_export_dialog.cpp  layout_sim_export_dialog.h  numericvareditform.cpp  numericvareditform.h  pagepanel.cpp  (+24 more)
build_linux/: Makefile-UI  Makefile-solarpilot
build_vs2013/: SolarPILOT-UI.vcxproj  solarpilot.vcxproj
build_vs2017/: SolarPILOT-UI.sln  SolarPILOT-UI.vcxproj  solarpilot.vcxproj
deploy/: BuildDist_linux.sh  BuildInstaller_64bit.iss  BuildInstaller_64bit_LW.iss  BuildInstaller_Win32.iss  BuildInstaller_Win32_LW.iss  README.txt  setup_disclaimer.rtf  setup_script.iss
deploy/api/: .gitignore  copylot.py  field_eff_table.m  field_eff_table.py  min_example.m  min_example.py  pysoltrace.py  test_array.csv  test_field.csv  test_matrix.csv  test_script.m  test_script.py  test_solarpilot_soltrace.py
deploy/climate_files/: 723815TY.csv  724699TY.csv  AUS_NT.Alice.Springs.Airport_RMY.epw  EGY_Cairo.Intl.Airport_ETMY.epw  ESP_Almeria_SWEC.epw  ESP_Sevilla_SWEC.epw  NE Omaha.tm2  NV El Dorado Hourly.smw  USA_CA_CZ01RV2.epw  USA_CA_CZ03RV2.epw
deploy/exelib/custom/Call_EES/: Call_EES.sln  Call_EES.vcxproj  Main.cpp  sample_lkt.txt  tube_props.txt
deploy/exelib/custom/Call_EES/Debug/: test.EES  test_macro.emf  vc110.idb
deploy/exelib/custom/EES_Thermal/: 13_04_30_Model1_Find_Thickness.EES  13_04_30_Model2_2D_Energy_Balance.EES  Find_Tube_Thickness.emf
deploy/exelib/help/: Aimingstrategies.html  Analyticalopticalsimulation.html  Climate.html  Costs.html  Fieldlayout.html  FrequentlyAskedQuestions.html  GettingStarted.html  HelioTempManagement.html  HeliostatTemplate.html  HeliostatsTree.html  InputPageReference.html  LayoutSetup.html  Layoutresults.html  Layoutstrategies.html  Markets.html  ModelTheory.html  Opensourcesoftware.html  Optimization.html  Optimizationstrategies.html  Parametrics.html  Performancesimulation.html  Plant.html  RecTempManagement.html  ReceiverFluxProfile.html  ReceiverTemplate.html  ReceiversTree.html  References.html  Results.html  Simulationcontrol.html  SolTraceopticalsimulation.html  SolarPILOT.chm  SolarPILOT.html  SystemSummary.html  _toc.json  toc.html
deploy/exelib/help/context/: 0.html  1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  27.html  28.html  29.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
deploy/exelib/help/css/: effects.min.css  hnd.content.css  hnd.css  layout.min.css
deploy/exelib/help/js/: app.min.js  hndsd.js  hndsd.min.js  hndse.min.js
deploy/exelib/help/vendors/uri-1.18.9/: uri.min.js
deploy/linux/: Compatibility_troubleshooting.txt
deploy/samples/: multi-receiver-surround.spt  multi-receiver.spt  test_cloudsvg.lk  test_disable.lk  test_helio_templates.lk  test_land.lk  test_rec_templates.lk  test_save.lk  test_script.lk  test_soiling.lk  test_svg.lk  test_svgfile.lk  test_user_positions.lk
help/resource/: 2018-3-5_website-update.docx  DelsolEmpiricalSpacing.py  Minimum row spacing.tif  falling_particle_geometry.pptx  help_equations.docx  help_equations.tex  help_equations2.docx  icon-rs.xcf  land_bounds_example.txt  solarpilot_2018-3-5_website-update-b.docx  solarpilot_2018-3-5_website-update.docx
linux_build/: Makefile  Makefile-UI  Makefile-solarpilot
src/: FieldPlot.cpp  FieldPlot.h  FluxPlot.cpp  FluxPlot.h  GUI_ClimatePage.cpp  GUI_CostPage.cpp  GUI_HeliostatPage.cpp  GUI_LayoutPage.cpp  GUI_LayoutSimulationPage.cpp  GUI_MarketPage.cpp  GUI_OptimizationPage.cpp  GUI_ParametricSimulationPage.cpp  GUI_PerformanceSimulationPage.cpp  GUI_PlantPage.cpp  GUI_PlotFieldPage.cpp  GUI_PlotFluxPage.cpp  GUI_ReceiverPage.cpp  GUI_ResultsPage.cpp  GUI_SimulationsPage.cpp  GUI_main.cpp  GUI_main.h  ImageCanvas.cpp  ImageCanvas.h  InputControl.cpp  InputControl.h  OutputControl.cpp  OutputControl.h  gui_about_dialog.cpp  gui_about_dialog.h  gui_util.cpp  gui_util.h  help.cpp  kml_select_dialog.cpp  kml_select_dialog.h  layout_sim_export_dialog.cpp  layout_sim_export_dialog.h  numericvareditform.cpp  numericvareditform.h  pagepanel.cpp  pagepanel.h  (+19 more)
tools/: OptionLibrary.xlsx  TM2_variable_map.xlsx  dni-filter.py  linecount.py  project_todo.txt  var_map_output.txt  variable_definitions.txt  variable_map.xlsx  variable_map_makefile.py
winvs_build/: SolarPILOT-UI.sln  SolarPILOT-UI.vcxproj  SolarPILOT_vc2013.rc  solarpilot.vcxproj
